# confcls

./: .gitignore  .pylintrc  LICENSE  Makefile  README.adoc  README.md  pyproject.toml
confcls/: __init__.py  configurable.py  dot_path.py  object.py
tests/: test_class.py  test_dataclass.py  test_dot_path.py  test_object.py
